/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.google.jetpackcamera.model.proto";
option java_multiple_files = true;

// Represents the TestPattern sealed interface.
message TestPattern {
  oneof pattern {
    TestPatternOff off = 1;
    TestPatternColorBars color_bars = 2;
    TestPatternColorBarsFadeToGray color_bars_fade_to_gray = 3;
    TestPatternPN9 pn9 = 4;
    TestPatternCustom1 custom1 = 5;
    TestPatternSolidColor solid_color = 6;
  }
}

// Corresponds to TestPattern.Off
message TestPatternOff {}

// Corresponds to TestPattern.ColorBars
message TestPatternColorBars {}

// Corresponds to TestPattern.ColorBarsFadeToGray
message TestPatternColorBarsFadeToGray {}

// Corresponds to TestPattern.PN9
message TestPatternPN9 {}

// Corresponds to TestPattern.Custom1
message TestPatternCustom1 {}

// Corresponds to TestPattern.SolidColor
message TestPatternSolidColor {
  uint32 red = 1;
  uint32 green_even = 2;
  uint32 green_odd = 3;
  uint32 blue = 4;
}
